[gd_scene load_steps=5 format=3 uid="uid://csh8v1ppmr5ky"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_tfkah"]
[ext_resource type="Texture2D" uid="uid://c1aff12iir2k4" path="res://assets/flag.png" id="2_avjih"]
[ext_resource type="PackedScene" uid="uid://ef6chpfe70w2" path="res://scenes/gameover.tscn" id="2_qbvbk"]
[ext_resource type="Texture2D" uid="uid://cqbqk1jalfk6q" path="res://assets/stopwatch.png" id="3_swhrv"]

[node name="Game" type="Node2D"]
script = ExtResource("1_tfkah")

[node name="Tiles" type="Node2D" parent="."]
position = Vector2(32, 32)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Panel" type="Panel" parent="Camera2D/CanvasLayer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(82, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/HBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_right = 36.0
offset_bottom = 32.0
grow_horizontal = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Camera2D/CanvasLayer/HBoxContainer/HBoxContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_avjih")
expand_mode = 5

[node name="Flags" type="Label" parent="Camera2D/CanvasLayer/HBoxContainer/HBoxContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(32, 26)
layout_mode = 2
text = ":999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Camera2D/CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Panel" type="Panel" parent="Camera2D/CanvasLayer/HBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(82, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/HBoxContainer/HBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_right = 36.0
offset_bottom = 32.0
grow_horizontal = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Camera2D/CanvasLayer/HBoxContainer/HBoxContainer2/Panel/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_swhrv")
expand_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/HBoxContainer/HBoxContainer2/Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="TimeMinuts" type="Label" parent="Camera2D/CanvasLayer/HBoxContainer/HBoxContainer2/Panel/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(19, 26)
layout_mode = 2
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/HBoxContainer/HBoxContainer2/Panel/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = ":"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeSeconds" type="Label" parent="Camera2D/CanvasLayer/HBoxContainer/HBoxContainer2/Panel/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(19, 26)
layout_mode = 2
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="gameover_screen" parent="." instance=ExtResource("2_qbvbk")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
